# django_rest_framework

./: pyproject.toml
config/: settings.py  urls.py
restaurants/: models.py  serializers.py  tests.py  urls.py  views.py
reviews/: models.py  tests.py
users/: tests.py
